--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     margin: 60px auto;
     width: 80%;
+    color: #CFDBD5;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -22,11 +23,12 @@ a:hover {
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    color: #F5CB5C;
 }
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: #333;
+    color: #333533;
 }
 footer {
     border-top: 1px solid #d5d5d5;
