--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 60px auto;
     width: 80%;
-    background-color: #cfdbd5;
+    background-color: #333533;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -28,7 +28,7 @@ h1 {
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: #333533;
+    color: #e8eddf;
 }
 footer {
     border-top: 1px solid #d5d5d5;
