--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:nicksentjens@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/smartsnipe">github.com/smartsnipe</a></li>
+	        		<li><a href="mailto:nicksentjens@gmail.com">Contact us at fiveman.smartsnipe@gmail.com</a></li>
 				</ul>
 			</footer>
 		</body>
